; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_inheritance.c_zend_visibility_string.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_inheritance.c_zend_visibility_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZEND_ACC_PUBLIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"public\00", align 1
@ZEND_ACC_PRIVATE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"private\00", align 1
@ZEND_ACC_PROTECTED = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [10 x i8] c"protected\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @zend_visibility_string(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @ZEND_ACC_PUBLIC, align 4
  %6 = and i32 %4, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %20

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @ZEND_ACC_PRIVATE, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %20

15:                                               ; preds = %9
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @ZEND_ACC_PROTECTED, align 4
  %18 = and i32 %16, %17
  %19 = call i32 @ZEND_ASSERT(i32 %18)
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %20

20:                                               ; preds = %15, %14, %8
  %21 = load i8*, i8** %2, align 8
  ret i8* %21
}

declare dso_local i32 @ZEND_ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
